--- a/public/styles.css
+++ b/public/styles.css
@@ -6,7 +6,7 @@ body {
     text-align: center;
 }
 body.quiz{
-    background-image: url(subete.png);
+    background-image: url(subete.jpg);
 }
 body.index{
     background-image: url(bgm.jpg) ;
